# swpp202001-team7

./: .gitignore  Makefile.template  README.md  configure.sh  llvm-10.0.json  run-filechecks.sh  test.sh
builtin/: LoopOptimization.sh.template
documents/: A. Requirement and Specification.md  A._Requirement_and_Specification(Final).md  A._Requirement_and_Specification(SP2).md  A._Requirement_and_Specification(SP3).md  B._Planning.md  C. Project Hierarchy  C._Progress_Report(SP1).md  C._Progress_Report(SP2).md  C._Progress_Report(SP3).md  C._Project_Hierarchy  D._Project_Hierarchy
interpreter/: .gitignore  CMakeLists.txt  README.md  build.sh  sf-interpreter
interpreter/src/: error.cpp  error.h  function.cpp  function.h  main.cpp  memory.cpp  memory.h  opcode.h  parser.cpp  parser.h  program.cpp  program.h  reg.h  regfile.cpp  regfile.h  size.cpp  size.h  state.cpp  state.h  stmt.cpp  stmt.h  value.cpp  value.h
optimizations/: CheckConstExpr.cpp  PackRegisters copy.cpp  PackRegisters.cpp  PackRegisters.h  RemoveUnsupportedOps.cpp  RemoveUnsupportedOps.h  WeirdArithmetic.cpp  WeirdArithmetic.h  Wrapper.cpp  Wrapper.h
src/: AssemblyEmitter.cpp  SimpleBackend.cpp  SimpleBackend.h  main.cpp
test/: checker.sh  checker.sh.template  checker_backend.sh  checker_only_benchmarks.sh  log_checker.py  plot.py  single_checker.sh  single_checker.sh.template  tc_checker.sh  template.c
testcases/: i1opt.ll  shiftopt.ll  simple2.ll  simple3.ll  uremopt.ll  weirdarith.ll
workspace/: Manual.md  c-to-ll.sh  checker.sh  io.c  log_checker.py  run-filechecks.sh  sample.c  (+1 more)
(+233 files in other folders)
